SDIT-2980 Time column for movement can contain wrong date (#2467)
* SDIT-2980 Time column for movement can contain wrong date

* SDIT-2980 Time column for movement can contain wrong date

---------

Co-authored-by: steverendell <steve.rendell@syscon.net>